@@ -2,111 +2,132 @@ package com.maxime.router;
 
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
+import org.mockito.internal.stubbing.answers.AnswersWithDelay;
+import org.mockito.internal.stubbing.answers.Returns;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.client.ResourceAccessException;
 import org.springframework.web.client.RestTemplate;
 
 import java.net.ConnectException;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
-import static com.fasterxml.jackson.databind.type.LogicalType.Map;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.when;
 
 @SpringBootTest
 class RouterControllerTest {
-	private final List<String> mockUrls = Arrays.asList(
-			"http://api1.example.com",
-			"http://api2.example.com",
-			"http://api3.example.com"
-	);
+    private final List<String> mockUrls = Arrays.asList(
+            "http://api1.example.com",
+            "http://api2.example.com",
+            "http://api3.example.com"
+    );
 
-	@Test
-	void testGetNextInstanceUrl() {
-		RouterController routerController = new RouterController(mockUrls);
+    @Test
+    void testGetNextInstanceUrl() {
+        RouterController routerController = new RouterController(mockUrls);
 
-		// Simulate four consecutive calls to getNextInstanceUrl
-		String instance1 = routerController.getNextInstanceUrl().getApplicationApiUrl();
-		String instance2 = routerController.getNextInstanceUrl().getApplicationApiUrl();
-		String instance3 = routerController.getNextInstanceUrl().getApplicationApiUrl();
-		String instance4 = routerController.getNextInstanceUrl().getApplicationApiUrl();
+        // Simulate four consecutive calls to getNextInstanceUrl
+        String instance1 = routerController.getNextInstanceUrl().getApplicationApiUrl();
+        String instance2 = routerController.getNextInstanceUrl().getApplicationApiUrl();
+        String instance3 = routerController.getNextInstanceUrl().getApplicationApiUrl();
+        String instance4 = routerController.getNextInstanceUrl().getApplicationApiUrl();
 
-		// Verify that instances are returned in a round-robin fashion
-		assertEquals("http://api1.example.com", instance1);
-		assertEquals("http://api2.example.com", instance2);
-		assertEquals("http://api3.example.com", instance3);
-		assertEquals("http://api1.example.com", instance4);
-	}
+        // Verify that instances are returned in a round-robin fashion
+        assertEquals("http://api1.example.com", instance1);
+        assertEquals("http://api2.example.com", instance2);
+        assertEquals("http://api3.example.com", instance3);
+        assertEquals("http://api1.example.com", instance4);
+    }
 
-	@Test
-	void testWithEmptyConstructor() {
-		RouterController routerController = new RouterController();
+    @Test
+    void testWithEmptyConstructor() {
+        RouterController routerController = new RouterController();
 
-		// Simulate four consecutive calls to getNextInstanceUrl
-		String instance1 = routerController.getNextInstanceUrl().getApplicationApiUrl();
-		String instance2 = routerController.getNextInstanceUrl().getApplicationApiUrl();
-		String instance3 = routerController.getNextInstanceUrl().getApplicationApiUrl();
-		String instance4 = routerController.getNextInstanceUrl().getApplicationApiUrl();
+        // Simulate four consecutive calls to getNextInstanceUrl
+        String instance1 = routerController.getNextInstanceUrl().getApplicationApiUrl();
+        String instance2 = routerController.getNextInstanceUrl().getApplicationApiUrl();
+        String instance3 = routerController.getNextInstanceUrl().getApplicationApiUrl();
+        String instance4 = routerController.getNextInstanceUrl().getApplicationApiUrl();
 
-		// Verify that instances are returned in a round-robin fashion
-		// And using the default URLs
-		assertEquals("http://localhost:5000/api/endpoint", instance1);
-		assertEquals("http://localhost:5001/api/endpoint", instance2);
-		assertEquals("http://localhost:5002/api/endpoint", instance3);
-		assertEquals("http://localhost:5000/api/endpoint", instance4);
-	}
+        // Verify that instances are returned in a round-robin fashion
+        // And using the default URLs
+        assertEquals("http://localhost:5001/api/endpoint", instance1);
+        assertEquals("http://localhost:5002/api/endpoint", instance2);
+        assertEquals("http://localhost:5003/api/endpoint", instance3);
+        assertEquals("http://localhost:5001/api/endpoint", instance4);
+    }
 
-	@Test
-	void testGetNextInstanceUrlWithMocking() { //TODO remove
+    @Test
+    void testRouteRequestWithCircuitBreaker() {
+        RestTemplate mockedRestTemplate = Mockito.mock(RestTemplate.class);
+        List<String> mockUrl2 = Arrays.asList(
+                "http://api1.example.com",
+                "http://api2.example.com"
+        );
+        RouterController routerController = new RouterController(mockUrl2, mockedRestTemplate);
+        ResponseEntity<Object> response;
 
-		RouterController mockedRouter = Mockito.mock(RouterController.class);
+        ResourceAccessException resourceAccessExceptionWithConnectException = new ResourceAccessException("", new ConnectException());
 
-		when(mockedRouter.getNextInstanceUrl())
-				.thenReturn( new ApplicationApiInstance("http://mocked-api.example.com"));
+        // request1 send to api1: SERVER DOWN
+        when(mockedRestTemplate.postForEntity("http://api1.example.com", Collections.singletonMap("data", "request1"), Object.class))
+                .thenThrow(resourceAccessExceptionWithConnectException);
+        response = routerController.routeRequest(Collections.singletonMap("data", "request1"));
+        assertEquals(HttpStatus.SERVICE_UNAVAILABLE, response.getStatusCode());
 
-		// Test the behavior of the mocked object
-		String instanceUrl = mockedRouter.getNextInstanceUrl().getApplicationApiUrl();
+        // request2 send to api2: SUCCESS
+        when(mockedRestTemplate.postForEntity("http://api2.example.com", Collections.singletonMap("data", "request2"), Object.class))
+                .thenReturn(new ResponseEntity<Object>(Collections.singletonMap("data", "request2"), HttpStatus.OK));
+        response = routerController.routeRequest(Collections.singletonMap("data", "request2"));
+        assertEquals(HttpStatus.OK, response.getStatusCode());
 
-		// Verify that the mock returned the expected URL
-		assertEquals("http://mocked-api.example.com", instanceUrl);
-	}
+        // request3 send to api1: 500
+        when(mockedRestTemplate.postForEntity("http://api1.example.com", Collections.singletonMap("data", "request3"), Object.class))
+                .thenReturn(new ResponseEntity<Object>(Collections.singletonMap("data", "request3"), HttpStatus.INTERNAL_SERVER_ERROR));
+        response = routerController.routeRequest(Collections.singletonMap("data", "request3"));
+        assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
 
-	@Test
-	void testRouteRequestWithCircuitBreaker() {
-		RestTemplate mockedRestTemplate = Mockito.mock(RestTemplate.class);
-		RouterController routerController = new RouterController(mockUrls, mockedRestTemplate);
+        // request4 send to api2: SUCCESS
+        when(mockedRestTemplate.postForEntity("http://api2.example.com", Collections.singletonMap("data", "request4"), Object.class))
+                .thenReturn(new ResponseEntity<Object>(Collections.singletonMap("data", "request4"), HttpStatus.OK));
+        response = routerController.routeRequest(Collections.singletonMap("data", "request4"));
+        assertEquals(HttpStatus.OK, response.getStatusCode());
 
-		// Simulate consecutive failures to trigger the circuit breaker
-		when(mockedRestTemplate.exchange(Mockito.anyString(), Mockito.eq(HttpMethod.POST),
-				Mockito.any(), Mockito.eq(Object.class)))
-				.thenThrow(new ConnectException("Connect issue"))
-				.thenThrow(new ConnectException("Connect issue"))
-				.thenReturn(new ResponseEntity<>(Map.of("key", "value"), HttpStatus.OK));
+        // request5 send to api1: RESPONSE_TOO_SLOW
+        when(mockedRestTemplate.postForEntity("http://api1.example.com", Collections.singletonMap("data", "request5"), Object.class))
+                .thenAnswer(
+                        new AnswersWithDelay(
+                                RouterController.SLOW_CALL_DURATION_THRESHOLD_MS + 100,
+                                new Returns(new ResponseEntity<Object>(Collections.singletonMap("data", "request5"), HttpStatus.OK))
+                        )
+                );
+        response = routerController.routeRequest(Collections.singletonMap("data", "request5"));
+        assertEquals(HttpStatus.OK, response.getStatusCode());
 
-		// First two requests should trigger the circuit breaker
-		ResponseEntity<Object> response1 = routerController.routeRequestWithCircuitBreaker(
-				Map.of("data", "request1"), 1, 3);
-		ResponseEntity<Object> response2 = routerController.routeRequestWithCircuitBreaker(
-				Map.of("data", "request2"), 1, 3);
+        // Circuit Breaker should be opened now for api1, because of 3 consecutive errors
 
-		// Circuit breaker should be open, and these requests should fail
-		assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response1.getStatusCode());
-		assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response2.getStatusCode());
+        // request send to api2: 500
+        // All requests should go to api2, because api1 is open
+        for (int i = 0; i < CircuitBreaker.CONSECUTIVE_FAILURE_THRESHOLD; i++) {
+            //System.out.println(i);
+            when(mockedRestTemplate.postForEntity("http://api2.example.com", Collections.singletonMap("data", "request"), Object.class))
+                    .thenReturn(new ResponseEntity<Object>(Collections.singletonMap("data", "request"), HttpStatus.INTERNAL_SERVER_ERROR));
+            response = routerController.routeRequest(Collections.singletonMap("data", "request"));
+            assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
+        }
 
-		// Wait for the circuit breaker to reset (RESET_TIMEOUT)
-		try {
-			Thread.sleep(6000);
-		} catch (InterruptedException e) {
-			e.printStackTrace();
-		}
-
-		// Third request should succeed, and the circuit breaker should reset
-		ResponseEntity<Object> response3 = routerController.routeRequestWithCircuitBreaker(
-				Map.of("data", "request3"), 1, 3);
-		assertEquals(HttpStatus.OK, response3.getStatusCode());
-	}
-
+        // Both api1 and api2 circuit breaker should be open
+        when(mockedRestTemplate.postForEntity("http://api2.example.com", Collections.singletonMap("data", "request"), Object.class))
+                .thenReturn(new ResponseEntity<Object>(Collections.singletonMap("data", "request"), HttpStatus.INTERNAL_SERVER_ERROR));
+        response = routerController.routeRequest(Collections.singletonMap("data", "request"));
+        assertEquals(HttpStatus.SERVICE_UNAVAILABLE, response.getStatusCode());
+        assertEquals(
+                "No healthy Application API instances available. The request was not processed. You can retry again later.",
+                response.getBody()
+        );
+    }
 }
